[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chat-pro"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "anthropic>=0.28",
    "groq>=0.9",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "faiss-cpu>=1.8",
    "pypdf>=4.2",
    "streamlit>=1.35",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
]